{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 26,
  "lineage": "60ff68ff-5c5d-6801-7934-f8230b47beca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vec_prd_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0126b0d638eb69858",
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:elastic-ip/eipalloc-0126b0d638eb69858",
            "association_id": "eipassoc-02196ee0e72aba5aa",
            "domain": "vpc",
            "id": "eipalloc-0126b0d638eb69858",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-051ae38d8d9eb4dbf",
            "private_dns": "ip-10-250-1-177.ap-northeast-2.compute.internal",
            "private_ip": "10.250.1.177",
            "public_dns": "ec2-15-164-13-203.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.13.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VEC-PRD-NAT-EIP"
            },
            "tags_all": {
              "Name": "VEC-PRD-NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vec_prd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:internet-gateway/igw-0ab8ac76113540810",
            "id": "igw-0ab8ac76113540810",
            "owner_id": "009946608368",
            "tags": {
              "Name": "VEC-PRD-IGW"
            },
            "tags_all": {
              "Name": "VEC-PRD-IGW"
            },
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vec_prd_ngw_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0126b0d638eb69858",
            "association_id": "eipassoc-02196ee0e72aba5aa",
            "connectivity_type": "public",
            "id": "nat-0f13b757f6575a835",
            "network_interface_id": "eni-051ae38d8d9eb4dbf",
            "private_ip": "10.250.1.177",
            "public_ip": "15.164.13.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057ff2ebc022df46b",
            "tags": {
              "Name": "VEC-PRD-NAT-2A"
            },
            "tags_all": {
              "Name": "VEC-PRD-NAT-2A"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vec_prd_nat_eip",
            "aws_subnet.vec_prd_pub_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vec_prd_pri_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0debed023bdf29df61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f13b757f6575a835",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0debed023bdf29df6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vec_prd_nat_eip",
            "aws_nat_gateway.vec_prd_ngw_2a",
            "aws_route_table.vec_prd_pri_rt",
            "aws_subnet.vec_prd_pub_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vec_prd_pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab8ac76113540810",
            "id": "r-rtb-05b75569f6b996edc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b75569f6b996edc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vec_prd_igw",
            "aws_route_table.vec_prd_pub_rt",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vec_prd_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:route-table/rtb-0debed023bdf29df6",
            "id": "rtb-0debed023bdf29df6",
            "owner_id": "009946608368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f13b757f6575a835",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VEC-PRD-RT-PRI"
            },
            "tags_all": {
              "Name": "VEC-PRD-RT-PRI"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vec_prd_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:route-table/rtb-05b75569f6b996edc",
            "id": "rtb-05b75569f6b996edc",
            "owner_id": "009946608368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab8ac76113540810",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VEC-PRD-RT-PUB"
            },
            "tags_all": {
              "Name": "VEC-PRD-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_bst_rt_associate_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05714d9f3bf8f299b",
            "route_table_id": "rtb-05b75569f6b996edc",
            "subnet_id": "subnet-0a43863a46bc7e44c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pub_rt",
            "aws_subnet.vec_prd_bst_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pri_rt_associate_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0021efd3a33124a28",
            "route_table_id": "rtb-0debed023bdf29df6",
            "subnet_id": "subnet-0b85a038f51c69b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pri_rt",
            "aws_subnet.vec_prd_pri_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pri_rt_associate_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dffa9d47461fd526",
            "route_table_id": "rtb-0debed023bdf29df6",
            "subnet_id": "subnet-0826a0aa02a083f7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pri_rt",
            "aws_subnet.vec_prd_pri_subnet_2c",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pub_rt_associate_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085759ccb4b5fb4e8",
            "route_table_id": "rtb-05b75569f6b996edc",
            "subnet_id": "subnet-057ff2ebc022df46b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pub_rt",
            "aws_subnet.vec_prd_pub_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pub_rt_associate_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae06a977e4418747",
            "route_table_id": "rtb-05b75569f6b996edc",
            "subnet_id": "subnet-02031981f83ed5746"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pub_rt",
            "aws_subnet.vec_prd_pub_subnet_2c",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_bst_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:subnet/subnet-0a43863a46bc7e44c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a43863a46bc7e44c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009946608368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-BESTION-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-BESTION-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pri_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:subnet/subnet-0b85a038f51c69b4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b85a038f51c69b4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009946608368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pri_subnet_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:subnet/subnet-0826a0aa02a083f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0826a0aa02a083f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009946608368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pub_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:subnet/subnet-057ff2ebc022df46b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057ff2ebc022df46b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009946608368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pub_subnet_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:subnet/subnet-02031981f83ed5746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02031981f83ed5746",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009946608368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-002b714baabb0a0f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vec_prd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:009946608368:vpc/vpc-002b714baabb0a0f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-09c8e0b600976bfe3",
            "default_route_table_id": "rtb-055e2176960708a19",
            "default_security_group_id": "sg-0a706dfd41192b89d",
            "dhcp_options_id": "dopt-0c14d9aab61889c36",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002b714baabb0a0f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055e2176960708a19",
            "owner_id": "009946608368",
            "tags": {
              "Name": "VEC-PRD-VPC"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}